--- a/Marlin/Makefile
+++ b/Marlin/Makefile
@@ -383,6 +383,11 @@ else ifeq ($(HARDWARE_MOTHERBOARD),1509)
   HARDWARE_VARIANT ?= Sanguino
   MCU              ?= atmega1284p
 
+# MKS SMelzi V1.0
+else ifeq ($(HARDWARE_MOTHERBOARD),1510)
+  HARDWARE_VARIANT ?= Sanguino
+  MCU              ?= atmega1284p
+
 #
 # Other ATmega644P, ATmega644, ATmega1284P
 #
